# shr-daw

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY.md  synth-player
config/: controller.conf  shsynth.conf
controller-profiles/: catalog.json
demos/: amazing-grace.shsong  auld-lang-syne.shsong  cleared-demos.json  cotton-eyed-joe.shsong  danny-boy.shsong  drunken-sailor.shsong  greensleeves.shsong  house-of-the-rising-sun.shsong  scarborough-fair.shsong  wellerman.shsong  whiskey-in-the-jar.shsong
docs/: AUDIO_GRAPH.md  AUDIO_SYSTEM_OPTIMIZATION.md  BUILD_WEEK.md  BUILD_WEEK_AUDIT.md  BUILD_WEEK_FEATURE_MATRIX.md  BUILD_WEEK_SUBMISSION.md  CONFIGURATION.md  CONNECTIONS.md  CONTROLLER_INTERFACE.md  CONTROLLER_PROFILES.md  DRUM_PATTERN_AUDIT.md  FINAL_PERFORMANCE_BUS.md  FIRST_RUN.md  FUTURE_IMPROVEMENTS.md  HELP.md  HOW_IT_WORKS.md  INSTALLATION.md  MAINTAINER_HELPERS.md  MENU_MANUAL.md  MIDI_DEVICE_PROFILES.md  MR18_TEST_PLAN.md  MULTITRACK_PRESENTATION.md  MULTITRACK_RECORDING.md  NEW_PATCHES.md  PHASE1_AUDIO_GRAPH_MEASUREMENT.md  PHASE2_AUDIO_GRAPH_MEASUREMENT.md  PHASE3_4_AUDIO_GRAPH_MEASUREMENT.md  PI5_HEADROOM_PLAN.md  PI5_NVME_INSTALL.md  POST_COMPETITION_MIXER_AUX_PLAN.md  POST_COMPETITION_RHYTHM_PLAN.md  PRESET_AUDIT.md  README.md  RELEASE_ROADMAP.md  TRACKER.md  USING_SHR_DAW.md  WORKFLOW_AUDIT_HANDOFF.md  WORKSPACE_HANDOFF.md  buildweek_journal.md
drum-patterns/: 11-bossa-nova.shdrum  catalog.shrdrums
midi-devices/: roland-d-50.json
scripts/: audio-performance.sh  generate_cleared_presets.sh  generate_demo_songs.py  (+6 more)
(+70 files in other folders)
