[package]
name = "shr-daw"
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
description = "Terminal synthv1, Yoshimi, and FluidSynth instrument appliance"
license = "MIT"

[[bin]]
name = "shr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.26"
libc = "0.2"
midir = "0.9"
quick-xml = "0.27"
ratatui = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
